# celer

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  codecov.yml
.github/workflows/: ci.yml  release-plz.yml
system/linux/ctypes/: Cargo.toml  README.md
system/linux/ctypes/src/: lib.rs
system/linux/syscalls/: CHANGELOG.md  Cargo.toml  README.md
system/linux/syscalls/examples/: hello.rs
system/linux/syscalls/src/: aarch64.rs  arch.rs  lib.rs  sys.rs  x86.rs  x86_64.rs
system/linux/syscalls/src/arch/: x86.rs
system/linux/syscalls/src/sys/: exit.rs  fork.rs  getpid.rs  read.rs  write.rs
