[package]
name = "celer_system_linux_syscalls"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Linux syscalls for Celer"
repository = "https://github.com/olukowski/celer"
readme = "README.md"

[dev-dependencies]
libc.workspace = true

[[example]]
name = "hello"
test = false
